--- a/flaskapp-database/flaskapp/templates/index.html
+++ b/flaskapp-database/flaskapp/templates/index.html
@@ -4,11 +4,8 @@
 <head>
     <title>Python Flask Bucket List App</title>
  
- 
-    <link href="https://getbootstrap.com/docs/3.4/dist/css/bootstrap.min.css" rel="stylesheet">
- 
-    <link href="https://getbootstrap.com/docs/3.4/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
- 
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+
  
 </head>
  
@@ -18,12 +15,9 @@
         <div class="header">
             <nav>
                 <ul class="nav nav-pills pull-right">
-                    <li role="presentation" class="active"><a href="#">Home</a>
-                    </li>
-                    <li role="presentation"><a href="showSignIn">Sign In</a>
-                    </li>
-                    <li role="presentation"><a href="showSignUp">Sign Up</a>
-                    </li>
+                    <li role="presentation" class="active"><a href="#">Home</a></li>
+                    <li role="presentation"><a href="{{ url_for('showSignIn') }}">Sign In</a></li>
+                    <li role="presentation"><a href="{{ url_for('showSignUp') }}">Sign Up</a></li>
                 </ul>
             </nav>
             <h3 class="text-muted">Python Flask App</h3>
@@ -32,7 +26,7 @@
         <div class="jumbotron">
             <h1>Bucket List App</h1>
             <p class="lead"></p>
-            <p><a class="btn btn-lg btn-success" href="showSignUp" role="button">Sign up today</a>
+            <p><a class="btn btn-lg btn-success" href="{{ url_for('showSignUp') }}" role="button">Sign up today</a></p>
             </p>
         </div>
  
