--- a/flaskapp-database/flaskapp/templates/error.html
+++ b/flaskapp-database/flaskapp/templates/error.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+ 
 <head>
-    <title>Error</title>
-    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <title>Unauthorized Access:: Python Flask Bucket List App</title>
+ 
+ 
+    <link href="https://getbootstrap.com/docs/3.4/dist/css/bootstrap.min.css" rel="stylesheet">
+ 
+    <link href="https://getbootstrap.com/docs/3.4/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+ 
+ 
 </head>
+ 
 <body>
+ 
     <div class="container">
-        <h1>Error</h1>
-        <p>{{ error }}</p>
-        <a href="{{ url_for('showSignIn') }}" class="btn btn-primary">Back to Login</a>
+        <div class="header">
+            <nav>
+                <ul class="nav nav-pills pull-right">
+                    <li role="presentation"><a href="/">Home</a>
+                    </li>
+                    <li role="presentation"><a href="/showSignIn">Sign In</a>
+                    </li>
+                    <li role="presentation"><a href="/showSignUp">Sign Up</a>
+                    </li>
+                </ul>
+            </nav>
+            <h3 class="text-muted">Python Flask App</h3>
+        </div>
+ 
+        <div class="jumbotron">
+            <h1>{{error}}</h1>
+        </div>
+ 
+ 
+ 
+        <footer class="footer">
+            <p>&copy; Company 2015</p>
+        </footer>
+ 
     </div>
 </body>
+ 
 </html>
