--- a/flaskapp-database/flaskapp/templates/signup.html
+++ b/flaskapp-database/flaskapp/templates/signup.html
@@ -12,7 +12,7 @@
     <script src="../static/js/signUp.js"> </script>
     
   </head>
-<!--  
+ 
   <body>
  
     <div class="container">
@@ -48,5 +48,5 @@
       </footer>
  
     </div>
-  </body> -->
+  </body>
 </html>
