--- a/flaskapp-database/flaskapp/templates/addWish.html
+++ b/flaskapp-database/flaskapp/templates/addWish.html
@@ -9,7 +9,7 @@
  
     <link href="https://getbootstrap.com/docs/3.4/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
  
-    <script src="../static/js/jquery-1.12.2.js"></script>
+    <script src="{{ url_for('static', filename='js/jquery-1.12.2.js') }}"></script>
  
  
 </head>
@@ -20,16 +20,16 @@
         <div class="header">
             <nav>
                 <ul class="nav nav-pills pull-right">
-                    <li role="presentation" class="active"><a href="#">Add Item</a>
+                    <li role="presentation" class="active"><a href="{{ url_for('showAddWish') }}">Add Item</a>
                     </li>
-                    <li role="presentation"><a href="/logout">Logout</a>
+                    <li role="presentation"><a href="{{ url_for('logout') }}">Logout</a>
                     </li>
                 </ul>
             </nav>
             <h3 class="text-muted">Python Flask App</h3>
         </div>
         <section>
-            <form class="form-horizontal" method="post" action="/addWish">
+            <form class="form-horizontal" method="post" action="{{ url_for('addWish') }}">
                 <fieldset>
  
                     <!-- Form Name -->
