--- a/flaskapp-database/flaskapp/templates/signup.html
+++ b/flaskapp-database/flaskapp/templates/signup.html
@@ -7,9 +7,18 @@
     <link href="https://getbootstrap.com/docs/3.4/dist/css/bootstrap.min.css" rel="stylesheet">
  
     <link href="https://getbootstrap.com/docs/3.4/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-    <link href="../static/css/signup.css" rel="stylesheet">
-    <script src="../static/js/jquery-1.12.2.js"></script>
-    <script src="../static/js/signUp.js"> </script>
+    <link href="{{ url_for('static', filename='css/signup.css') }}" rel="stylesheet">
+    
+    <!-- Pass Flask URLs to JavaScript -->
+    <script>
+        const FLASK_URLS = {
+            signUp: "{{ url_for('signUp') }}",
+            showSignIn: "{{ url_for('showSignin') }}"
+        };
+    </script>
+    
+    <script src="{{ url_for('static', filename='js/jquery-1.12.2.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/signUp.js') }}"></script>
     
   </head>
  
@@ -19,9 +28,9 @@
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" ><a href="/">Home</a></li>
-            <li role="presentation"><a href="showSignIn">Sign In</a></li>
-            <li role="presentation" class="active"><a href="showSignUp">Sign Up</a></li>
+            <li role="presentation" ><a href="{{ url_for('main') }}">Home</a></li>
+            <li role="presentation"><a href="{{ url_for('showSignin') }}">Sign In</a></li>
+            <li role="presentation" class="active"><a href="{{ url_for('showSignUp') }}">Sign Up</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">Python Flask App</h3>
