--- a/flaskapp-database/flaskapp/templates/userHome.html
+++ b/flaskapp-database/flaskapp/templates/userHome.html
@@ -8,42 +8,17 @@
     <link href="https://getbootstrap.com/docs/3.4/dist/css/bootstrap.min.css" rel="stylesheet">
  
     <link href="https://getbootstrap.com/docs/3.4/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-    <link href="../static/css/signup.css" rel="stylesheet">
-    <script src="../static/js/jquery-1.12.2.js"></script>
-    <script src="../static/js/jquery-1.11.2.js"></script>
+    <link href="{{ url_for('static', filename='css/signup.css') }}" rel="stylesheet">
+    
+    <!-- Pass Flask URLs to JavaScript -->
     <script>
-        $(function(){
-            $.ajax({
-                url : '/getWish',
-                type : 'GET',
-                success: function(res){
-                    var div = $('<div>')
-        .attr('class', 'list-group')
-        .append($('<a>')
-            .attr('class', 'list-group-item active')
-            .append($('<h4>')
-                .attr('class', 'list-group-item-heading'),
-                $('<p>')
-                .attr('class', 'list-group-item-text')));
-                                    
-                    
-                    
-                    var wishObj = JSON.parse(res);
-                    var wish = '';
-                    
-                    $.each(wishObj,function(index, value){
-                        wish = $(div).clone();
-                        $(wish).find('h4').text(value.Title);
-                        $(wish).find('p').text(value.Description);
-                        $('.jumbotron').append(wish);
-                    });
-                },
-                error: function(error){
-                    console.log(error);
-                }
-            });
-        });
+        const FLASK_URLS = {
+            getWish: "{{ url_for('getWish') }}"
+        };
     </script>
+    
+    <script src="{{ url_for('static', filename='js/jquery-1.12.2.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/getWish.js') }}"></script>
  
 </head>
  
@@ -53,9 +28,9 @@
         <div class="header">
             <nav>
                 <ul class="nav nav-pills pull-right">
-                    <li role="presentation" class="active"><a href="/logout">Logout</a>
+                    <li role="presentation" class="active"><a href="{{ url_for('logout') }}">Logout</a>
                     </li>
-                    <li role="presentation"><a href="/showAddWish">Add Wish</a></li>
+                    <li role="presentation"><a href="{{ url_for('showAddWish') }}">Add Wish</a></li>
                 </ul>
             </nav>
             <h3 class="text-muted">Python Flask App</h3>
