--- a/flaskapp-database/flaskapp/templates/signup.html
+++ b/flaskapp-database/flaskapp/templates/signup.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <title>Python Flask Bucket List App</title>
- 
-    
+
     <link href="https://getbootstrap.com/docs/3.4/dist/css/bootstrap.min.css" rel="stylesheet">
- 
     <link href="https://getbootstrap.com/docs/3.4/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/signup.css') }}" rel="stylesheet">
-    
+
     <!-- Pass Flask URLs to JavaScript -->
     <script>
         const FLASK_URLS = {
@@ -16,46 +14,43 @@
             showSignIn: "{{ url_for('showSignin') }}"
         };
     </script>
-    
+
     <script src="{{ url_for('static', filename='js/jquery-1.12.2.js') }}"></script>
     <script src="{{ url_for('static', filename='js/signUp.js') }}"></script>
-    
-  </head>
- 
-  <body>
- 
-    <div class="container">
-      <div class="header">
+</head>
+
+<body>
+<div class="container">
+    <div class="header">
         <nav>
-          <ul class="nav nav-pills pull-right">
-            <li role="presentation" ><a href="{{ url_for('main') }}">Home</a></li>
-            <li role="presentation"><a href="{{ url_for('showSignin') }}">Sign In</a></li>
-            <li role="presentation" class="active"><a href="{{ url_for('showSignUp') }}">Sign Up</a></li>
-          </ul>
+            <ul class="nav nav-pills pull-right">
+                <li role="presentation"><a href="{{ url_for('main') }}">Home</a></li>
+                <li role="presentation"><a href="{{ url_for('showSignin') }}">Sign In</a></li>
+                <li role="presentation" class="active"><a href="{{ url_for('showSignUp') }}">Sign Up</a></li>
+            </ul>
         </nav>
         <h3 class="text-muted">Python Flask App</h3>
-      </div>
- 
-      <div class="jumbotron">
-        <h1>Bucket List App test </h1>
-        <form class="form-signin">
-        <label for="inputName" class="sr-only">Name</label>
-        <input type="name" name="inputName" id="inputName" class="form-control" placeholder="Name" required autofocus>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" required>
-         
-        <button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button">Sign up</button>
-      </form>
-      </div>
- 
-       
- 
-      <footer class="footer">
-        <p>&copy; Company 2015</p>
-      </footer>
- 
     </div>
-  </body>
+
+    <div class="jumbotron">
+        <h1>Bucket List App</h1>
+        <form class="form-signin">
+            <label for="inputName" class="sr-only">Name</label>
+            <input type="text" name="inputName" id="inputName" class="form-control" placeholder="Name" required autofocus>
+
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required>
+
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" required>
+
+            <button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button">Sign up</button>
+        </form>
+    </div>
+
+    <footer class="footer">
+        <p>&copy; Company 2015</p>
+    </footer>
+</div>
+</body>
 </html>
