--- a/flaskapp-database/flaskapp/templates/userHome.html
+++ b/flaskapp-database/flaskapp/templates/userHome.html
@@ -1,52 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
- 
 <head>
     <title>Python Flask Bucket List App</title>
- 
- 
+
     <link href="https://getbootstrap.com/docs/3.4/dist/css/bootstrap.min.css" rel="stylesheet">
- 
     <link href="https://getbootstrap.com/docs/3.4/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/signup.css') }}" rel="stylesheet">
-    
+
     <!-- Pass Flask URLs to JavaScript -->
     <script>
         const FLASK_URLS = {
             getWish: "{{ url_for('getWish') }}"
         };
     </script>
-    
+
     <script src="{{ url_for('static', filename='js/jquery-1.12.2.js') }}"></script>
     <script src="{{ url_for('static', filename='js/getWish.js') }}"></script>
- 
 </head>
- 
+
 <body>
- 
-    <div class="container">
-        <div class="header">
-            <nav>
-                <ul class="nav nav-pills pull-right">
-                    <li role="presentation" class="active"><a href="{{ url_for('logout') }}">Logout</a>
-                    </li>
-                    <li role="presentation"><a href="{{ url_for('showAddWish') }}">Add Wish</a></li>
-                </ul>
-            </nav>
-            <h3 class="text-muted">Python Flask App</h3>
-        </div>
- 
-        <div class="jumbotron">
-            
- 
-        </div>
- 
- 
-        <footer class="footer">
-            <p>&copy; Company 2015</p>
-        </footer>
- 
+<div class="container">
+    <div class="header">
+        <nav>
+            <ul class="nav nav-pills pull-right">
+                <li role="presentation" class="active"><a href="{{ url_for('logout') }}">Logout</a></li>
+                <li role="presentation"><a href="{{ url_for('showAddWish') }}">Add Wish</a></li>
+            </ul>
+        </nav>
+        <h3 class="text-muted">Python Flask App</h3>
     </div>
+
+    <div class="jumbotron">
+        <!-- Wishes will be populated by JS -->
+    </div>
+
+    <footer class="footer">
+        <p>&copy; Company 2015</p>
+    </footer>
+</div>
 </body>
- 
 </html>
