--- a/flaskapp-database/flaskapp/templates/error.html
+++ b/flaskapp-database/flaskapp/templates/error.html
@@ -20,7 +20,7 @@
                 <ul class="nav nav-pills pull-right">
                     <li role="presentation"><a href="{{ url_for('main') }}">Home</a>
                     </li>
-                    <li role="presentation"><a href="{{ url_for('showSignin') }}">Sign In</a>
+                    <li role="presentation"><a href="{{ url_for('showSignIn') }}">Sign In</a>
                     </li>
                     <li role="presentation"><a href="{{ url_for('showSignUp') }}">Sign Up</a>
                     </li>
