--- a/flaskapp-database/flaskapp/templates/index.html
+++ b/flaskapp-database/flaskapp/templates/index.html
@@ -5,7 +5,7 @@
 
     <link href="https://getbootstrap.com/docs/3.4/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/3.4/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/signup.css') }}" rel="stylesheet">
+    <link href="{{ BASE_PATH }}{{ url_for('static', filename='css/signup.css') }}" rel="stylesheet">
 </head>
 
 <body>
@@ -13,9 +13,9 @@
     <div class="header">
         <nav>
             <ul class="nav nav-pills pull-right">
-                <li role="presentation" class="active"><a href="{{ url_for('main') }}">Home</a></li>
-                <li role="presentation"><a href="{{ url_for('showSignin') }}">Sign In</a></li>
-                <li role="presentation"><a href="{{ url_for('showSignUp') }}">Sign Up</a></li>
+                <li role="presentation" class="active"><a href="{{ BASE_PATH }}{{ url_for('main') }}">Home</a></li>
+                <a href="{{ BASE_PATH }}{{ url_for('showSignIn') }}">Sign In</a>
+                <li role="presentation"><a href="{{ BASE_PATH }}{{ url_for('showSignUp') }}">Sign Up</a></li>
             </ul>
         </nav>
         <h3 class="text-muted">Python Flask App</h3>
@@ -24,7 +24,7 @@
     <div class="jumbotron">
         <h1>Bucket List App</h1>
         <p class="lead"></p>
-        <p><a class="btn btn-lg btn-success" href="{{ url_for('showSignUp') }}" role="button">Sign up today</a></p>
+        <p><a class="btn btn-lg btn-success" href="{{ BASE_PATH }}{{ url_for('showSignUp') }}" role="button">Sign up today</a></p>
     </div>
 
     <div class="row marketing">
