working front end paths

--- a/flaskapp-database/flaskapp/templates/signin.html
+++ b/flaskapp-database/flaskapp/templates/signin.html
@@ -3,10 +3,18 @@
 <head>
     <title>Python Flask Bucket List App</title>
 
+    <!-- Bootstrap CSS -->
     <link href="https://getbootstrap.com/docs/3.4/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/3.4/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/signup.css') }}" rel="stylesheet">
-    <script src="{{ url_for('static', filename='js/jquery-1.12.2.js') }}"></script>
+
+    <!-- Reuse signup.css for styling -->
+    <link href="{{ BASE_PATH }}{{ url_for('static', filename='css/signup.css') }}" rel="stylesheet">
+
+    <!-- jQuery -->
+    <script src="{{ BASE_PATH }}{{ url_for('static', filename='js/jquery-1.12.2.js') }}"></script>
+
+    <!-- App-specific JS -->
+    <script src="{{ BASE_PATH }}{{ url_for('static', filename='js/config.js') }}"></script>
 </head>
 
 <body>
@@ -24,9 +32,10 @@
 
     <div class="jumbotron">
         <h1>Bucket List App</h1>
-        <form id="signinForm" action="{{ url_for('validateLogin') }}" method="post">
+        <form id="signinForm" action="{{ BASE_PATH }}{{ url_for('validateLogin') }}" method="post" class="form-signin">
             <label for="inputEmail" class="sr-only">Email address</label>
             <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+
             <label for="inputPassword" class="sr-only">Password</label>
             <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" required>
 
