--- a/flaskapp-database/flaskapp/templates/signup.html
+++ b/flaskapp-database/flaskapp/templates/signup.html
@@ -3,16 +3,19 @@
 <head>
     <title>Python Flask Bucket List App</title>
 
+    <!-- Bootstrap CSS -->
     <link href="https://getbootstrap.com/docs/3.4/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/3.4/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/signup.css') }}">
 
-    <!-- Pass Flask URLs to JavaScript -->
-    <script src="/static/js/config.js"></script>
-    <script src="/static/js/signup.js"></script>
+    <!-- App-specific CSS -->
+    <link rel="stylesheet" href="{{ BASE_PATH }}{{ url_for('static', filename='css/signup.css') }}">
 
-    <script src="{{ url_for('static', filename='js/jquery-1.12.2.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/signUp.js') }}"></script>
+    <!-- jQuery -->
+    <script src="{{ BASE_PATH }}{{ url_for('static', filename='js/jquery-1.12.2.js') }}"></script>
+
+    <!-- App-specific JS -->
+    <script src="{{ BASE_PATH }}{{ url_for('static', filename='js/config.js') }}"></script>
+    <script src="{{ BASE_PATH }}{{ url_for('static', filename='js/signUp.js') }}"></script>
 </head>
 
 <body>
@@ -30,7 +33,7 @@
 
     <div class="jumbotron">
         <h1>Bucket List App</h1>
-        <form class="form-signin">
+        <form id="signupForm" class="form-signin">
             <label for="inputName" class="sr-only">Name</label>
             <input type="text" name="inputName" id="inputName" class="form-control" placeholder="Name" required autofocus>
 
